<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailListActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_titles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/rv_tankvorgaenge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/tv_title_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:overScrollMode="always"/>

            <TextView
                android:id="@+id/tv_title_old_km"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="0dp"
                android:overScrollMode="always"
                android:text="@string/old_km" />

            <TextView
                android:id="@+id/tv_title_new_km"
                android:layout_width="57dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="175dp"
                android:overScrollMode="always"
                android:text="@string/new_km" />

            <TextView
                android:id="@+id/tv_title_liters"
                android:layout_width="60dp"
                android:layout_height="41dp"
                android:layout_marginLeft="250dp"
                android:text="@string/liters" />

            <TextView
                android:id="@+id/tv_title_price_per_liter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="325dp"
                android:text="@string/price_per_liter"
                android:overScrollMode="always"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tankvorgaenge"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_titles" />
</androidx.constraintlayout.widget.ConstraintLayout>